# CalaPy

./: .gitignore  LICENSE.txt  README.md  commands.txt  pyproject.toml  release_a_new_version.md  setup.py
calapy/: __init__.py  array.py  check.py  clock.py  combinations.py  directory.py  download.py  maths.py  txt.py
calapy/ml/: __init__.py  devices.py  preprocess.py  tensor.py  tensors.py  test.py  train.py  utilities.py
calapy/ml/datasets/: __init__.py  csv_old.py  image.py  loaders.py  loaders_old.py
calapy/ml/models/: __init__.py  image.py  model_tools.py  single_layers.py
calapy/ml/models/features/: DQCs.py  __init__.py  no_task.py  proactive_old.py
calapy/ml/models/multi_layers/: __init__.py  hetero.py  heterogeneous.py  homogeneous.py
calapy/ml/models/single_layers/: __init__.py  conv.py  non_trainable.py  recurrent.py
calapy/ml/output_methods/: __init__.py
calapy/ml/output_methods/features/: DQCs.py  DQNs.py  __init__.py  classifiers.py  general.py
calapy/ml/rl/: __init__.py  utilities.py
calapy/ml/rl/ql/: __init__.py  different_time_sizes.py  same_time_sizes.py
calapy/ml/sl/: __init__.py
calapy/ml/sl/dl/: __init__.py  (+5 more)
calapy/ml/tvt/: __init__.py  utilities.py
calapy/plot/: __init__.py  bars.py  cmaps.py  heatmaps.py  points.py
calapy/preprocessing/: reorder_trials.py
calapy/stats/: exclusions.py  paired_t_test.py  unpaired_t_test.py
calapy/stimulation/: display.py
src/calapy/: __init__.py  array.py  combinations.py  format.py  maths.py  txt.py
src/calapy/ml/: __init__.py
src/calapy/signal_process/: __init__.py  filters.py
(+65 files in other folders)
